--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="img-fluid position-absolute w-100 h-100" src="img/about.jpg" alt="" style="object-fit: cover;">
+                        <img class="img-fluid position-absolute w-100 h-100" src="img/about.avif" alt="" style="object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -389,7 +389,7 @@
                 <div class="card">
                     <img src="img/alliedhealth.png" alt="Allied Health" />
                     <p>Allied Health</p>
-                    <a href="https://wa.me/+918590203073" target="_blank" class="whatsapp-link">
+                    <a href="contact.html" target="_blank" class="whatsapp-link">
                         <button> <i class="fab fa-whatsapp"></i> Apply</i></button>
                     </a>
                 </div>
@@ -398,7 +398,7 @@
                     <div class="card">
                         <img src="img/Architecture.png" alt="Architecture" />
                         <p>Architecture</p>
-                        <a href="https://wa.me/+918590203073" target="_blank" class="whatsapp-link">
+                        <a href="contact.html" target="_blank" class="whatsapp-link">
                             <button> <i class="fab fa-whatsapp"></i> Apply</i></button>
                         </a>
                     </div>
@@ -407,7 +407,7 @@
                     <div class="card">
                         <img src="img/computer.png" alt="computer" />
                         <p>Computer</p>
-                        <a href="https://wa.me/+918590203073" target="_blank" class="whatsapp-link">
+                        <a href="contact.html" target="_blank" class="whatsapp-link">
                             <button> <i class="fab fa-whatsapp"></i> Apply</i></button>
                         </a>
                     </div>
@@ -416,7 +416,7 @@
                     <div class="card">
                         <img src="img/Agriculture.png" alt="Agriculture" />
                         <p>Agriculture</p>
-                        <a href="https://wa.me/+918590203073" target="_blank" class="whatsapp-link">
+                        <a href="contact.html" target="_blank" class="whatsapp-link">
                             <button> <i class="fab fa-whatsapp"></i> Apply</i></button>
                         </a>
                     </div>
@@ -425,7 +425,7 @@
                     <div class="card">
                         <img src="img/Aviation.png" alt="Aviation" />
                         <p>Aviation</p>
-                        <a href="https://wa.me/+918590203073" target="_blank" class="whatsapp-link">
+                        <a href="contact.html" target="_blank" class="whatsapp-link">
                             <button> <i class="fab fa-whatsapp"></i> Apply</i></button>
                         </a>
                     </div>
@@ -434,7 +434,7 @@
                     <div class="card">
                         <img src="img/Designing.png" alt="Designing" />
                         <p>Designing</p>
-                        <a href="https://wa.me/+918590203073" target="_blank" class="whatsapp-link">
+                        <a href="contact.html" target="_blank" class="whatsapp-link">
                             <button> <i class="fab fa-whatsapp"></i> Apply</i></button>
                         </a>
                     </div>
@@ -443,7 +443,7 @@
                     <div class="card">
                         <img src="img/Humanity.png" alt="Humanity" />
                         <p>Arts and Humanity</p>
-                        <a href="https://wa.me/+918590203073" target="_blank" class="whatsapp-link">
+                        <a href="contact.html" target="_blank" class="whatsapp-link">
                             <button> <i class="fab fa-whatsapp"></i> Apply</i></button>
                         </a>
                     </div>
@@ -532,7 +532,7 @@
                         <a class="btn btn-outline-light btn-social" href="https://wa.me/+918590203073"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <!-- <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Gallery</h4>
                     <div class="row g-2 pt-2">
                         <div class="col-4">
@@ -554,7 +554,7 @@
                             <img class="img-fluid bg-light p-1" src="img/course-1.jpg" alt="">
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Join Us!</h4>
                     <p>Click Here To Reach Us</p>
