--- a/institutions.html
+++ b/institutions.html
@@ -265,7 +265,7 @@
                         <a class="btn btn-outline-light btn-social" href="https://wa.me/+918590203073"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <!-- <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Gallery</h4>
                     <div class="row g-2 pt-2">
                         <div class="col-4">
@@ -287,7 +287,7 @@
                             <img class="img-fluid bg-light p-1" src="img/course-1.jpg" alt="">
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Join Us!</h4>
                     <p>Click Here To Reach Us</p>
