--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <div class="row justify-content-start">
                             <div class="col-sm-10 col-lg-8">
                                 <h5 class="text-primary text-uppercase mb-3 animated slideInDown">Get Your Admissions Now...!</h5>
-                                <h3 class="display-3 text-white animated slideInDown" style="width: 1000px;">Enroll In Usher Academia For Personalized College Guidence.</h3>
+                                <h3 class="display-3 text-white animated slideInDown" id="str">Enroll In Usher Academia For Personalized College Guidence.</h3>
                                 <p class="fs-5 text-white mb-4 pb-2">Unlock your academic potential with our expert admission guidance. We help students navigate the application process seamlessly. Join the ranks of top institutions worldwide.</p>
                                 <a href="about.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
                                 <a href="https://wa.me/+918891903073" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Join Now</a>
@@ -100,7 +100,7 @@
                         <div class="row justify-content-start">
                             <div class="col-sm-10 col-lg-8">
                                 <h5 class="text-primary text-uppercase mb-3 animated slideInDown">Best Online Courses</h5>
-                                <h1 class="display-3 text-white animated slideInDown" style="width: 1200px;">We Help Students Get Admitted Into the Best Educational Institutions.</h1>
+                                <h1 class="display-3 text-white animated slideInDown" id="acad">We Help Students Get Admitted Into the Best Educational Institutions.</h1>
                                 <p class="fs-5 text-white mb-4 pb-2">Unlock your potential and achieve academic excellence at Usher Academia. Join us for an unparalleled learning experience and pave your way to a successful future.</p>
                                 <a href="about.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
                                 <a href="https://wa.me/+918891903073" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Join Now</a>
@@ -467,33 +467,33 @@
             </div>
             <div class="owl-carousel testimonial-carousel position-relative">
                 <div class="testimonial-item text-center">
-                    <img class="border rounded-circle p-2 mx-auto mb-3" src="img/testimonial-1.jpg" style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Student 1</h5>
-                    <p>Profession</p>
+                    <!-- <img class="border rounded-circle p-2 mx-auto mb-3" src="img/testimonial-1.jpg" style="width: 80px; height: 80px;"> -->
+                    <h5 class="mb-0">Abhilash K C </h5>
+                    <p></p>
                     <div class="testimonial-text bg-light text-center p-4">
                     <p class="mb-0">Usher Academy guided me seamlessly through every step of my higher education journey, making my dream university a reality!</p>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
-                    <img class="border rounded-circle p-2 mx-auto mb-3" src="img/testimonial-2.jpg" style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Student 2</h5>
-                    <p>Profession</p>
+                    <!-- <img class="border rounded-circle p-2 mx-auto mb-3" src="img/testimonial-2.jpg" style="width: 80px; height: 80px;"> -->
+                    <h5 class="mb-0">Raheem Kabeer</h5>
+                    <p></p>
                     <div class="testimonial-text bg-light text-center p-4">
                     <p class="mb-0">With Usher Academy's expert advice and support, I secured admission to a top-tier university</p>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
-                    <img class="border rounded-circle p-2 mx-auto mb-3" src="img/testimonial-3.jpg" style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Student 3</h5>
-                    <p>Profession</p>
+                    <!-- <img class="border rounded-circle p-2 mx-auto mb-3" src="img/testimonial-3.jpg" style="width: 80px; height: 80px;"> -->
+                    <h5 class="mb-0">Abhirami C P </h5>
+                    <p></p>
                     <div class="testimonial-text bg-light text-center p-4">
                     <p class="mb-0">The personalized guidance from Usher Academy was instrumental in helping me choose the perfect course for my career goals.</p>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
-                    <img class="border rounded-circle p-2 mx-auto mb-3" src="img/testimonial-4.jpg" style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Student 4</h5>
-                    <p>Profession</p>
+                    <!-- <img class="border rounded-circle p-2 mx-auto mb-3" src="img/testimonial-4.jpg" style="width: 80px; height: 80px;"> -->
+                    <h5 class="mb-0">Ashwin Krishna K M </h5>
+                    <p></p>
                     <div class="testimonial-text bg-light text-center p-4">
                     <p class="mb-0">Usher Academy's dedicated team made the complex application process simple and stress-free, leading me to academic success!</p>
                     </div>
