--- a/testimonial.html
+++ b/testimonial.html
@@ -95,33 +95,33 @@
             </div>
             <div class="owl-carousel testimonial-carousel position-relative">
                 <div class="testimonial-item text-center">
-                    <img class="border rounded-circle p-2 mx-auto mb-3" src="img/testimonial-1.jpg" style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Student 1</h5>
-                    <p>Profession</p>
+                    <!-- <img class="border rounded-circle p-2 mx-auto mb-3" src="img/testimonial-1.jpg" style="width: 80px; height: 80px;"> -->
+                    <h5 class="mb-0">Abhilash K C </h5>
+                    <p></p>
                     <div class="testimonial-text bg-light text-center p-4">
                     <p class="mb-0">Usher Academy guided me seamlessly through every step of my higher education journey, making my dream university a reality!</p>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
-                    <img class="border rounded-circle p-2 mx-auto mb-3" src="img/testimonial-2.jpg" style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Student 2</h5>
-                    <p>Profession</p>
+                    <!-- <img class="border rounded-circle p-2 mx-auto mb-3" src="img/testimonial-2.jpg" style="width: 80px; height: 80px;"> -->
+                    <h5 class="mb-0">Raheem Kabeer</h5>
+                    <p></p>
                     <div class="testimonial-text bg-light text-center p-4">
                     <p class="mb-0">With Usher Academy's expert advice and support, I secured admission to a top-tier university</p>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
-                    <img class="border rounded-circle p-2 mx-auto mb-3" src="img/testimonial-3.jpg" style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Student 3</h5>
-                    <p>Profession</p>
+                    <!-- <img class="border rounded-circle p-2 mx-auto mb-3" src="img/testimonial-3.jpg" style="width: 80px; height: 80px;"> -->
+                    <h5 class="mb-0">Abhirami C P </h5>
+                    <p></p>
                     <div class="testimonial-text bg-light text-center p-4">
                     <p class="mb-0">The personalized guidance from Usher Academy was instrumental in helping me choose the perfect course for my career goals.</p>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
-                    <img class="border rounded-circle p-2 mx-auto mb-3" src="img/testimonial-4.jpg" style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Student 4</h5>
-                    <p>Profession</p>
+                    <!-- <img class="border rounded-circle p-2 mx-auto mb-3" src="img/testimonial-4.jpg" style="width: 80px; height: 80px;"> -->
+                    <h5 class="mb-0">Ashwin Krishna K M </h5>
+                    <p></p>
                     <div class="testimonial-text bg-light text-center p-4">
                     <p class="mb-0">Usher Academy's dedicated team made the complex application process simple and stress-free, leading me to academic success!</p>
                     </div>
