--- a/contact.html
+++ b/contact.html
@@ -119,6 +119,7 @@
                         <div class="ms-3">
                             <h5 class="text-primary">Mobile</h5>
                             <p class="mb-0">+91 8891903073</p>
+                            <p class="mb-0">+91 8590203073</p>
                         </div>
                     </div>
                     <!-- <div class="d-flex align-items-center">
